<resources>
    <string name="app_name">Futbol mundial</string>
    <string name="mensaje_principal">Seleccione su opcion:</string>
    <string name="gestion_de_jugador">Gestión de jugador</string>
    <string name="gestionar_jugador">Jugadores</string>
    <string name="gestion_de_equipo">Gestión de equipos</string>
    <string name="gestionar_equipo">Equipos</string>
    <string name="agregar_equipo">Agregar</string>
    <string name="modificar_equipo">Modificar</string>
    <string name="listar_equipos">Lista de Equipos</string>
    <string name="editar_equipo">Editar equipo</string>
    <string name="eliminar_equipo">Eliminar equipo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_equipo">Nombre del equipo</string>
    <string name="activo">ACTIVO</string>
    <string name="presidente_equipo">Presidente</string>
    <string name="localidad">Localidad</string>
    <string name="patrocinador">Patrocinador</string>
    <string name="ver_equipos">Listar equipos</string>
    <string name="buscarEquipo">Buscar equipo:</string>
    <string name="buscar_equipo">Buscar Equipo</string>
    <string name="txt_idJugador">Id_</string>
    <string name="txt_nombre">NombreJugador</string>
    <string name="txt_edad">Edad</string>
    <string name="lesion">Lesion</string>
    <string name="buscar_jugador">Buscar jugador</string>
    <string name="listar_jugador">Listar jugadores</string>
    <string name="agregar_jugador">Agregar</string>
    <string name="txt_avatar">Avatar:</string>
    <string name="jugador_edad">Edad</string>
    <string name="avatar">avatar</string>
</resources>