<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/txt_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_agregarJugador"
        style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/agregar_equipo"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view"
        app:maxImageSize="60dp"
        app:srcCompat="@drawable/agregar" />

    <Button
        android:id="@+id/btn_verJugadores"
        android:layout_width="123dp"
        android:layout_height="69dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_weight="1"
        android:text="@string/ver_equipos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_agregarJugador"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view"
        app:layout_constraintVertical_bias="0.017" />

    <Button

        android:layout_width="122dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_weight="1"
        android:text="@string/buscar_equipo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_verJugadores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregarJugador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_buscar">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>